# smser

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
deploy/: smser.service  smserprom.yml  smserprom_test.yml
src/: alertmanager.rs  buildinfo.rs  cli.rs  lib.rs  main.rs  metrics.rs  modem.rs  server.rs  types.rs
