[package]
name = "smser"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities", "hardware-support"]
repository = "https://github.com/ruediger/smser"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
quick-xml = { version = "0.38", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.24.3"
metrics-exporter-prometheus = { version = "0.18.1", default-features = false }
tower-http = { version = "0.6.8", features = ["trace"] }
