[package]
name = "smser"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities", "hardware-support"]
repository = "https://github.com/ruediger/smser"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
quick-xml = { version = "0.38", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["full"] }
dotenvy = "0.15"
tracing = "0.1"

# Server specific dependencies
axum = { version = "0.7", optional = true }
axum-server = { version = "0.7", features = ["tls-rustls-no-provider"], optional = true }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"], optional = true }
tower-http = { version = "0.6.8", features = ["trace"], optional = true }
metrics = { version = "0.24.3", optional = true }
metrics-exporter-prometheus = { version = "0.18.1", default-features = false, optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

[features]
default = ["server", "alertmanager"]
server = ["dep:axum", "dep:axum-server", "dep:rustls", "dep:tower-http", "dep:metrics", "dep:metrics-exporter-prometheus", "dep:tracing-subscriber"]
alertmanager = ["server"]
